feat(auth): Implement authentication system with role selection and protected routes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -117,5 +117,12 @@
     "userDeleted": "User deleted successfully",
     "saveSuccess": "Saved successfully",
     "deleteConfirm": "Are you sure you want to delete this item?"
-  }
+  },
+  
+  "roleAdmin": "Admin",
+  "roleBuildingOwner": "Building Owner",
+  "roleHomeOwner": "Home Owner",
+  "roleTenant": "Tenant",
+  "roleGuest": "Guest",
+  "roleOthers": "Others"
 }
