feat: Add user management components and mock data
- Implemented AccountsInfo component to display test accounts information.
- Created UserFilters component for filtering users by search, role, and status.
- Developed UserModal component for adding and editing user details.
- Added UserTable component to display user data with sorting and actions.
- Introduced mockAccounts.json for test accounts data.
- Defined user management types in user-management.ts for better type safety.

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,53 +1,116 @@
 {
-  "menu": "メニュー",
-  "others": "その他",
-  "dashboard": "ダッシュボード",
-  "calendar": "カレンダー",
-  "userManagement": "ユーザー管理",
-  "allUsers": "全ユーザー",
-  "addUser": "ユーザー追加",
-  "userRoles": "ユーザー役割",
-  "serviceFeeInvoice": "サービス料金請求書",
-  "allInvoices": "全請求書",
-  "createInvoice": "請求書作成",
-  "invoiceReports": "請求書レポート",
-  "eventsAnnouncements": "イベント・お知らせ",
-  "allEvents": "全イベント",
-  "addEvent": "イベント追加",
-  "announcements": "お知らせ",
-  "vouchersPromotions": "バウチャー・プロモーション",
-  "allVouchers": "全バウチャー",
-  "createVoucher": "バウチャー作成",
-  "promotions": "プロモーション",
-  "facilities": "施設",
-  "allFacilities": "全施設",
-  "addFacility": "施設追加",
-  "bookingManagement": "予約管理",
-  "forms": "フォーム",
-  "formElements": "フォーム要素",
-  "tables": "テーブル",
-  "basicTables": "基本テーブル",
-  "pages": "ページ",
-  "blankPage": "空白ページ",
-  "charts": "チャート",
-  "lineChart": "線グラフ",
-  "barChart": "棒グラフ",
-  "uiElements": "UI要素",
-  "alerts": "アラート",
-  "avatar": "アバター",
-  "badge": "バッジ",
-  "buttons": "ボタン",
-  "images": "画像",
-  "videos": "動画",
-  "authentication": "認証",
-  "signIn": "サインイン",
-  "signUp": "サインアップ",
-  "ecommerce": "Eコマース",
-  "404Error": "404エラー",
+  "nav": {
+    "menu": "メニュー",
+    "others": "その他",
+    "dashboard": "ダッシュボード",
+    "calendar": "カレンダー",
+    "userManagement": "ユーザー管理",
+    "allUsers": "全ユーザー",
+    "addUser": "ユーザー追加",
+    "userRoles": "ユーザー役割",
+    "serviceFeeInvoice": "サービス料金請求書",
+    "allInvoices": "全請求書",
+    "createInvoice": "請求書作成",
+    "invoiceReports": "請求書レポート",
+    "eventsAnnouncements": "イベント・お知らせ",
+    "allEvents": "全イベント",
+    "addEvent": "イベント追加",
+    "announcements": "お知らせ",
+    "vouchersPromotions": "バウチャー・プロモーション",
+    "allVouchers": "全バウチャー",
+    "createVoucher": "バウチャー作成",
+    "promotions": "プロモーション",
+    "facilities": "施設",
+    "allFacilities": "全施設",
+    "addFacility": "施設追加",
+    "bookingManagement": "予約管理",
+    "forms": "フォーム",
+    "formElements": "フォーム要素",
+    "tables": "テーブル",
+    "basicTables": "基本テーブル",
+    "pages": "ページ",
+    "blankPage": "空白ページ",
+    "charts": "チャート",
+    "lineChart": "線グラフ",
+    "barChart": "棒グラフ",
+    "uiElements": "UI要素",
+    "alerts": "アラート",
+    "avatar": "アバター",
+    "badge": "バッジ",
+    "buttons": "ボタン",
+    "images": "画像",
+    "videos": "動画",
+    "authentication": "認証",
+    "signIn": "サインイン",
+    "signUp": "サインアップ",
+    "ecommerce": "Eコマース",
+    "404Error": "404エラー",
+    "locations": "ロケーション",
+    "building": "建物",
+    "assetMaintenance": "資産/メンテナンス",
+    "settings": "設定"
+  },
+  
   "roleAdmin": "管理者",
   "roleBuildingOwner": "ビルオーナー",
   "roleHomeOwner": "住宅所有者",
   "roleTenant": "テナント",
   "roleGuest": "ゲスト",
-  "roleOthers": "その他"
+  "roleOthers": "その他",
+  "selectYourRole": "役割を選択してください",
+  "pleaseSelectAppropriateRole": "続行するために適切な役割を選択してください",
+  "processing": "処理中...",
+  "continue": "続行",
+  
+  "userManagement": {
+    "title": "ユーザー管理",
+    "description": "システム内の全ユーザーを管理",
+    "addUser": "ユーザー追加",
+    "editUser": "ユーザー編集",
+    "deleteUser": "ユーザー削除",
+    "searchPlaceholder": "名前またはメールで検索...",
+    "allRoles": "全役割",
+    "allStatuses": "全ステータス",
+    "filters": "フィルター",
+    "clearAllFilters": "全フィルターをクリア",
+    "activeFilters": "有効なフィルター:",
+    "search": "検索",
+    "role": "役割",
+    "status": "ステータス",
+    "active": "有効",
+    "inactive": "無効",
+    "permissions": "権限",
+    "totalUsers": "総ユーザー数",
+    "activeUsers": "有効ユーザー",
+    "inactiveUsers": "無効ユーザー",
+    "filteredResults": "フィルター結果",
+    "loadingUsers": "ユーザーを読み込み中...",
+    "noUsersFound": "ユーザーが見つかりません",
+    "tryDifferentFilters": "フィルターを変更するか、新しいユーザーを追加してください",
+    "name": "名前",
+    "email": "メール",
+    "createdAt": "作成日",
+    "actions": "操作",
+    "showing": "表示中",
+    "of": "/",
+    "results": "件",
+    "previous": "前へ",
+    "next": "次へ",
+    "deleteConfirm": "このユーザーを削除してもよろしいですか？",
+    "cannotDeleteSelf": "自分自身を削除することはできません",
+    "addNewUser": "新しいユーザーを追加",
+    "editUserTitle": "ユーザーを編集",
+    "cancel": "キャンセル",
+    "save": "保存",
+    "update": "更新",
+    "create": "作成",
+    "required": "必須",
+    "enterName": "ユーザー名を入力",
+    "enterEmail": "ユーザーメールを入力",
+    "selectRole": "役割を選択",
+    "selectStatus": "ステータスを選択",
+    "userPermissions": "ユーザー権限",
+    "loading": "読み込み中...",
+    "invalidEmail": "無効なメール形式"
+  }
 }
