--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -44,7 +44,11 @@
     "signIn": "Đăng nhập",
     "signUp": "Đăng ký",
     "ecommerce": "Thương mại điện tử",
-    "404Error": "Lỗi 404"
+    "404Error": "Lỗi 404",
+    "locations": "Địa điểm",
+    "building": "Tòa nhà",
+    "assetMaintenance": "Tài sản/Bảo trì",
+    "settings": "Cài đặt"
   },
   
   "common": {
@@ -87,20 +91,54 @@
   
   "userManagement": {
     "title": "Quản lý người dùng",
-    "userList": "Danh sách người dùng",
-    "addNewUser": "Thêm người dùng mới",
+    "description": "Quản lý tất cả người dùng trong hệ thống",
+    "addUser": "Thêm người dùng",
     "editUser": "Chỉnh sửa người dùng",
-    "userDetails": "Chi tiết người dùng",
-    "firstName": "Họ",
-    "lastName": "Tên",
-    "email": "Email",
-    "phone": "Số điện thoại",
-    "address": "Địa chỉ",
+    "deleteUser": "Xóa người dùng",
+    "searchPlaceholder": "Tìm theo tên hoặc email...",
+    "allRoles": "Tất cả vai trò",
+    "allStatuses": "Tất cả trạng thái",
+    "filters": "Bộ lọc",
+    "clearAllFilters": "Xóa tất cả bộ lọc",
+    "activeFilters": "Bộ lọc đang áp dụng:",
+    "search": "Tìm kiếm",
     "role": "Vai trò",
     "status": "Trạng thái",
     "active": "Hoạt động",
     "inactive": "Không hoạt động",
-    "permissions": "Quyền hạn"
+    "permissions": "Quyền hạn",
+    "totalUsers": "Tổng số người dùng",
+    "activeUsers": "Đang hoạt động",
+    "inactiveUsers": "Không hoạt động",
+    "filteredResults": "Kết quả lọc",
+    "loadingUsers": "Đang tải dữ liệu người dùng...",
+    "noUsersFound": "Không tìm thấy người dùng",
+    "tryDifferentFilters": "Thử thay đổi bộ lọc hoặc thêm người dùng mới",
+    "name": "Tên",
+    "email": "Email",
+    "createdAt": "Ngày tạo",
+    "actions": "Thao tác",
+    "showing": "Hiển thị",
+    "of": "trong số",
+    "results": "kết quả",
+    "previous": "Trước",
+    "next": "Sau",
+    "deleteConfirm": "Bạn có chắc chắn muốn xóa user này không?",
+    "cannotDeleteSelf": "Bạn không thể xóa chính mình",
+    "addNewUser": "Thêm người dùng mới",
+    "editUserTitle": "Chỉnh sửa người dùng",
+    "cancel": "Hủy",
+    "save": "Lưu",
+    "update": "Cập nhật",
+    "create": "Tạo mới",
+    "required": "Bắt buộc",
+    "enterName": "Nhập tên người dùng",
+    "enterEmail": "Nhập email người dùng",
+    "selectRole": "Chọn vai trò",
+    "selectStatus": "Chọn trạng thái",
+    "userPermissions": "Quyền hạn người dùng",
+    "loading": "Đang tải...",
+    "invalidEmail": "Email không hợp lệ"
   },
   
   "forms": {
@@ -124,5 +162,9 @@
   "roleHomeOwner": "Chủ nhà",
   "roleTenant": "Người thuê",
   "roleGuest": "Khách",
-  "roleOthers": "Khác"
+  "roleOthers": "Khác",
+  "selectYourRole": "Chọn vai trò của bạn",
+  "pleaseSelectAppropriateRole": "Vui lòng chọn vai trò phù hợp để tiếp tục",
+  "processing": "Đang xử lý...",
+  "continue": "Tiếp tục"
 }
