--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,7 +44,11 @@
     "signIn": "Sign In",
     "signUp": "Sign Up",
     "ecommerce": "Ecommerce",
-    "404Error": "404 Error"
+    "404Error": "404 Error",
+    "locations": "Locations",
+    "building": "Building",
+    "assetMaintenance": "Asset/Maintenance",
+    "settings": "Settings"
   },
   
   "common": {
@@ -87,20 +91,54 @@
   
   "userManagement": {
     "title": "User Management",
-    "userList": "User List",
-    "addNewUser": "Add New User",
+    "description": "Manage all users in the system",
+    "addUser": "Add User",
     "editUser": "Edit User",
-    "userDetails": "User Details",
-    "firstName": "First Name",
-    "lastName": "Last Name",
-    "email": "Email",
-    "phone": "Phone",
-    "address": "Address",
+    "deleteUser": "Delete User",
+    "searchPlaceholder": "Search by name or email...",
+    "allRoles": "All Roles",
+    "allStatuses": "All Status",
+    "filters": "Filters",
+    "clearAllFilters": "Clear All Filters",
+    "activeFilters": "Active Filters:",
+    "search": "Search",
     "role": "Role",
     "status": "Status",
     "active": "Active",
     "inactive": "Inactive",
-    "permissions": "Permissions"
+    "permissions": "Permissions",
+    "totalUsers": "Total Users",
+    "activeUsers": "Active Users",
+    "inactiveUsers": "Inactive Users",
+    "filteredResults": "Filtered Results",
+    "loadingUsers": "Loading users...",
+    "noUsersFound": "No users found",
+    "tryDifferentFilters": "Try changing filters or add new users",
+    "name": "Name",
+    "email": "Email",
+    "createdAt": "Created Date",
+    "actions": "Actions",
+    "showing": "Showing",
+    "of": "of",
+    "results": "results",
+    "previous": "Previous",
+    "next": "Next",
+    "deleteConfirm": "Are you sure you want to delete this user?",
+    "cannotDeleteSelf": "You cannot delete yourself",
+    "addNewUser": "Add New User",
+    "editUserTitle": "Edit User",
+    "cancel": "Cancel",
+    "save": "Save",
+    "update": "Update",
+    "create": "Create",
+    "required": "Required",
+    "enterName": "Enter user name",
+    "enterEmail": "Enter user email",
+    "selectRole": "Select role",
+    "selectStatus": "Select status",
+    "userPermissions": "User Permissions",
+    "loading": "Loading...",
+    "invalidEmail": "Invalid email format"
   },
   
   "forms": {
@@ -124,5 +162,9 @@
   "roleHomeOwner": "Home Owner",
   "roleTenant": "Tenant",
   "roleGuest": "Guest",
-  "roleOthers": "Others"
+  "roleOthers": "Others",
+  "selectYourRole": "Select Your Role",
+  "pleaseSelectAppropriateRole": "Please select the appropriate role to continue",
+  "processing": "Processing...",
+  "continue": "Continue"
 }
