feat: Add report navigation item and corresponding translations in multiple languages

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,6 +44,7 @@
     "signIn": "Sign In",
     "signUp": "Sign Up",
     "ecommerce": "Ecommerce",
+    "report": "Report",
     "404Error": "404 Error",
     "locations": "Locations",
     "building": "Building",
