--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -44,6 +44,7 @@
     "signIn": "サインイン",
     "signUp": "サインアップ",
     "ecommerce": "Eコマース",
+    "report": "レポート",
     "404Error": "404エラー",
     "locations": "ロケーション",
     "building": "建物",
