--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -43,6 +43,7 @@
   "signIn": "로그인",
   "signUp": "회원가입",
   "ecommerce": "전자상거래",
+  "report": "보고서",
   "404Error": "404 오류",
   "locations": "위치",
   "building": "건물",
