--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -44,6 +44,7 @@
     "signIn": "Đăng nhập",
     "signUp": "Đăng ký",
     "ecommerce": "Thương mại điện tử",
+    "report": "Báo cáo",
     "404Error": "Lỗi 404",
     "locations": "Địa điểm",
     "building": "Tòa nhà",
