--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -43,6 +43,7 @@
   "signIn": "登录",
   "signUp": "注册",
   "ecommerce": "电子商务",
+  "report": "报告",
   "404Error": "404错误",
   "locations": "位置",
   "building": "建筑",
