feat: Implement Role Permissions and User Roles management pages with corresponding UI and functionality refactor: Update navigation items to include Role Permissions and adjust translations for multiple languages fix: Change "Ecommerce" to "Analytics" in various language files for consistency

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,6 +8,7 @@
     "allUsers": "All Users",
     "addUser": "Add User",
     "userRoles": "User Roles",
+    "rolePermissions": "Role Permissions",
     "serviceFeeInvoice": "Service Fee Invoice",
     "allInvoices": "All Invoices",
     "createInvoice": "Create Invoice",
@@ -43,7 +44,7 @@
     "authentication": "Authentication",
     "signIn": "Sign In",
     "signUp": "Sign Up",
-    "ecommerce": "Ecommerce",
+  "ecommerce": "Analytics",
     "report": "Report",
     "404Error": "404 Error",
     "locations": "Locations",
