--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -8,6 +8,7 @@
     "allUsers": "全ユーザー",
     "addUser": "ユーザー追加",
     "userRoles": "ユーザー役割",
+    "rolePermissions": "役割権限",
     "serviceFeeInvoice": "サービス料金請求書",
     "allInvoices": "全請求書",
     "createInvoice": "請求書作成",
@@ -43,7 +44,7 @@
     "authentication": "認証",
     "signIn": "サインイン",
     "signUp": "サインアップ",
-    "ecommerce": "Eコマース",
+  "ecommerce": "Analytics",
     "report": "レポート",
     "404Error": "404エラー",
     "locations": "ロケーション",
