--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -7,6 +7,7 @@
   "allUsers": "모든 사용자",
   "addUser": "사용자 추가",
   "userRoles": "사용자 역할",
+    "rolePermissions": "역할 권한",
   "serviceFeeInvoice": "서비스 수수료 청구서",
   "allInvoices": "모든 청구서",
   "createInvoice": "청구서 생성",
@@ -42,7 +43,7 @@
   "authentication": "인증",
   "signIn": "로그인",
   "signUp": "회원가입",
-  "ecommerce": "전자상거래",
+  "ecommerce": "Analytics",
   "report": "보고서",
   "404Error": "404 오류",
   "locations": "위치",
