--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -8,6 +8,7 @@
     "allUsers": "Tất cả người dùng",
     "addUser": "Thêm người dùng",
     "userRoles": "Vai trò người dùng",
+    "rolePermissions": "Quyền hạn vai trò",
     "serviceFeeInvoice": "Hóa đơn phí dịch vụ",
     "allInvoices": "Tất cả hóa đơn",
     "createInvoice": "Tạo hóa đơn",
@@ -43,7 +44,7 @@
     "authentication": "Xác thực",
     "signIn": "Đăng nhập",
     "signUp": "Đăng ký",
-    "ecommerce": "Thương mại điện tử",
+  "ecommerce": "Analytics",
     "report": "Báo cáo",
     "404Error": "Lỗi 404",
     "locations": "Địa điểm",
