--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -7,6 +7,7 @@
   "allUsers": "所有用户",
   "addUser": "添加用户",
   "userRoles": "用户角色",
+    "rolePermissions": "角色权限",
   "serviceFeeInvoice": "服务费发票",
   "allInvoices": "所有发票",
   "createInvoice": "创建发票",
@@ -42,7 +43,7 @@
   "authentication": "认证",
   "signIn": "登录",
   "signUp": "注册",
-  "ecommerce": "电子商务",
+  "ecommerce": "Analytics",
   "report": "报告",
   "404Error": "404错误",
   "locations": "位置",
