feat: Implement report page with date range selection and download functionality
- Added ReportPage component for generating various reports.
- Implemented date range selection with a calendar UI.
- Added functionality to download reports in Excel format (mock implementation).
- Created reusable ReportCard interface for report details.
- Enhanced user experience with date range picker modal and clear filters option.

feat: Create CountryFilters component for filtering countries

- Developed CountryFilters component to manage search and status filters.
- Implemented clear filters functionality.
- Added visual feedback for active filters.

feat: Add CountryModal for adding and editing country details

- Created CountryModal component for country data entry.
- Implemented form validation and loading state during submission.
- Integrated state management for form data and error handling.

feat: Develop CountryTable component for displaying country data

- Implemented CountryTable component to list countries with sorting functionality.
- Added action buttons for editing and deleting countries.
- Enhanced UI with status indicators and formatted date display.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,11 +13,11 @@
     "allInvoices": "All Invoices",
     "createInvoice": "Create Invoice",
     "invoiceReports": "Invoice Reports",
-    "eventsAnnouncements": "Events & Announcements",
+    "eventsAnnouncements": "Events",
     "allEvents": "All Events",
     "addEvent": "Add Event",
     "announcements": "Announcements",
-    "vouchersPromotions": "Vouchers & Promotions",
+    "vouchersPromotions": "Promotions",
     "allVouchers": "All Vouchers",
     "createVoucher": "Create Voucher",
     "promotions": "Promotions",
@@ -48,9 +48,28 @@
     "report": "Report",
     "404Error": "404 Error",
     "locations": "Locations",
+    "country": "Country",
+    "province": "Province",
+    "district": "District",
+    "ward": "Ward",
+    "hamlet": "Hamlet",
+    "allLocations": "All Locations",
+    "addLocation": "Add Location",
     "building": "Building",
+    "buildingCategory": "Building Category",
+    "property": "Property",
+    "zoneAreaSection": "Zone/Area/Section",
+    "buildingBlock": "Building/Block",
+    "floor": "Floor",
+    "propertyUnit": "Property Unit",
     "assetMaintenance": "Asset/Maintenance",
-    "settings": "Settings"
+    "allAssets": "All Assets",
+    "maintenance": "Maintenance",
+    "maintenanceSchedule": "Maintenance Schedule",
+    "settings": "Settings",
+    "generalSettings": "General Settings",
+    "systemConfig": "System Configuration",
+    "notifications": "Notifications"
   },
   
   "common": {
