--- a/src/locales/en_backup.json
+++ b/src/locales/en_backup.json
@@ -11,11 +11,11 @@
   "allInvoices": "All Invoices",
   "createInvoice": "Create Invoice",
   "invoiceReports": "Invoice Reports",
-  "eventsAnnouncements": "Events & Announcements",
+  "eventsAnnouncements": "Events",
   "allEvents": "All Events",
   "addEvent": "Add Event",
   "announcements": "Announcements",
-  "vouchersPromotions": "Vouchers & Promotions",
+  "vouchersPromotions": "Promotions",
   "allVouchers": "All Vouchers",
   "createVoucher": "Create Voucher",
   "promotions": "Promotions",
