--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -48,9 +48,28 @@
     "report": "レポート",
     "404Error": "404エラー",
     "locations": "ロケーション",
+    "country": "国",
+    "province": "省",
+    "district": "区",
+    "ward": "区",
+    "hamlet": "村",
+    "allLocations": "全ロケーション",
+    "addLocation": "ロケーション追加",
     "building": "建物",
+    "buildingCategory": "建物カテゴリー",
+    "property": "不動産",
+    "zoneAreaSection": "ゾーン/エリア/セクション",
+    "buildingBlock": "建物/ブロック",
+    "floor": "階",
+    "propertyUnit": "物件ユニット",
     "assetMaintenance": "資産/メンテナンス",
-    "settings": "設定"
+    "allAssets": "全資産",
+    "maintenance": "メンテナンス",
+    "maintenanceSchedule": "メンテナンススケジュール",
+    "settings": "設定",
+    "generalSettings": "一般設定",
+    "systemConfig": "システム設定",
+    "notifications": "通知"
   },
   
   "roleAdmin": "管理者",
