--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -48,9 +48,28 @@
     "report": "Báo cáo",
     "404Error": "Lỗi 404",
     "locations": "Địa điểm",
+    "country": "Quốc gia",
+    "province": "Tỉnh/Thành phố",
+    "district": "Quận/Huyện",
+    "ward": "Phường/Xã",
+    "hamlet": "Thôn/Ấp",
+    "allLocations": "Tất cả địa điểm",
+    "addLocation": "Thêm địa điểm",
     "building": "Tòa nhà",
+    "buildingCategory": "Loại hình Bất động sản",
+    "property": "Bất động sản",
+    "zoneAreaSection": "Khu vực/Phân khu",
+    "buildingBlock": "Tòa nhà/Khối",
+    "floor": "Tầng",
+    "propertyUnit": "Căn hộ",
     "assetMaintenance": "Tài sản/Bảo trì",
-    "settings": "Cài đặt"
+    "allAssets": "Tất cả tài sản",
+    "maintenance": "Bảo trì",
+    "maintenanceSchedule": "Lịch bảo trì",
+    "settings": "Cài đặt",
+    "generalSettings": "Cài đặt chung",
+    "systemConfig": "Cấu hình hệ thống",
+    "notifications": "Thông báo"
   },
   
   "common": {
