--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -47,9 +47,28 @@
   "report": "报告",
   "404Error": "404错误",
   "locations": "位置",
+  "country": "国家",
+  "province": "省/市",
+  "district": "区/县",
+  "ward": "街道/乡镇",
+  "hamlet": "村/社区",
+  "allLocations": "所有位置",
+  "addLocation": "添加位置",
   "building": "建筑",
+  "buildingCategory": "建筑类别",
+  "property": "房产",
+  "zoneAreaSection": "区域/地段",
+  "buildingBlock": "建筑/楼栋",
+  "floor": "楼层",
+  "propertyUnit": "房产单元",
   "assetMaintenance": "资产/维护",
+  "allAssets": "所有资产",
+  "maintenance": "维护",
+  "maintenanceSchedule": "维护计划",
   "settings": "设置",
+  "generalSettings": "常规设置",
+  "systemConfig": "系统配置",
+  "notifications": "通知",
   "roleAdmin": "管理员",
   "roleBuildingOwner": "建筑业主",
   "roleHomeOwner": "房屋业主",
