--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -47,9 +47,28 @@
   "report": "보고서",
   "404Error": "404 오류",
   "locations": "위치",
+  "country": "국가",
+  "province": "성/시",
+  "district": "구/군",
+  "ward": "동/읍/면",
+  "hamlet": "마을",
+  "allLocations": "모든 위치",
+  "addLocation": "위치 추가",
   "building": "건물",
+  "buildingCategory": "건물 카테고리",
+  "property": "부동산",
+  "zoneAreaSection": "구역/지역/섹션",
+  "buildingBlock": "건물/블록",
+  "floor": "층",
+  "propertyUnit": "부동산 유닛",
   "assetMaintenance": "자산/유지보수",
+  "allAssets": "모든 자산",
+  "maintenance": "유지보수",
+  "maintenanceSchedule": "유지보수 일정",
   "settings": "설정",
+  "generalSettings": "일반 설정",
+  "systemConfig": "시스템 구성",
+  "notifications": "알림",
   "roleAdmin": "관리자",
   "roleBuildingOwner": "빌딩 소유자",
   "roleHomeOwner": "주택 소유자",
