--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -2,6 +2,11 @@
   "nav": {
     "menu": "メニュー",
     "others": "その他",
+    "mainMenu": "メインメニュー",
+    "serviceInvoice": "サービス請求書",
+    "myVouchers": "マイバウチャー",
+    "events": "イベント",
+    "myProperties": "マイプロパティ",
     "dashboard": "ダッシュボード",
     "calendar": "カレンダー",
     "userManagement": "ユーザー管理",
@@ -13,11 +18,11 @@
     "allInvoices": "全請求書",
     "createInvoice": "請求書作成",
     "invoiceReports": "請求書レポート",
-    "eventsAnnouncements": "イベント・お知らせ",
+    "eventsAnnouncements": "イベント",
     "allEvents": "全イベント",
     "addEvent": "イベント追加",
     "announcements": "お知らせ",
-    "vouchersPromotions": "バウチャー・プロモーション",
+    "vouchersPromotions": "バウチャー",
     "allVouchers": "全バウチャー",
     "createVoucher": "バウチャー作成",
     "promotions": "プロモーション",
