--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -2,6 +2,11 @@
   "nav": {
     "menu": "Menu",
     "others": "Khác",
+    "mainMenu": "Menu Chính",
+    "serviceInvoice": "Hóa Đơn Dịch Vụ",
+    "myVouchers": "Voucher Của Tôi",
+    "events": "Sự Kiện",
+    "myProperties": "Căn Hộ Của Tôi",
     "dashboard": "Bảng điều khiển",
     "calendar": "Lịch",
     "userManagement": "Quản lý người dùng",
@@ -13,11 +18,11 @@
     "allInvoices": "Tất cả hóa đơn",
     "createInvoice": "Tạo hóa đơn",
     "invoiceReports": "Báo cáo hóa đơn",
-    "eventsAnnouncements": "Sự kiện & Thông báo",
+    "eventsAnnouncements": "Sự kiện",
     "allEvents": "Tất cả sự kiện",
     "addEvent": "Thêm sự kiện",
     "announcements": "Thông báo",
-    "vouchersPromotions": "Voucher & Khuyến mãi",
+    "vouchersPromotions": "Voucher",
     "allVouchers": "Tất cả voucher",
     "createVoucher": "Tạo voucher",
     "promotions": "Khuyến mãi",
