--- a/src/locales/vi_backup.json
+++ b/src/locales/vi_backup.json
@@ -11,11 +11,11 @@
   "allInvoices": "Tất cả hóa đơn",
   "createInvoice": "Tạo hóa đơn",
   "invoiceReports": "Báo cáo hóa đơn",
-  "eventsAnnouncements": "Sự kiện & Thông báo",
+  "eventsAnnouncements": "Sự kiện",
   "allEvents": "Tất cả sự kiện",
   "addEvent": "Thêm sự kiện",
   "announcements": "Thông báo",
-  "vouchersPromotions": "Voucher & Khuyến mãi",
+  "vouchersPromotions": "Voucher",
   "allVouchers": "Tất cả voucher",
   "createVoucher": "Tạo voucher",
   "promotions": "Khuyến mãi",
