refactor: Update announcements path and localization for consistency

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -21,7 +21,7 @@
     "eventsAnnouncements": "イベント",
     "allEvents": "全イベント",
     "addEvent": "イベント追加",
-    "announcements": "お知らせ",
+    "announcements": "全お知らせ",
     "vouchersPromotions": "バウチャー",
     "allVouchers": "全バウチャー",
     "createVoucher": "バウチャー作成",
