--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -21,7 +21,7 @@
     "eventsAnnouncements": "Sự kiện",
     "allEvents": "Tất cả sự kiện",
     "addEvent": "Thêm sự kiện",
-    "announcements": "Thông báo",
+    "announcements": "Tất cả thông báo",
     "vouchersPromotions": "Voucher",
     "allVouchers": "Tất cả voucher",
     "createVoucher": "Tạo voucher",
