feat: Add Ticket Bus page with real-time clock and user information

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,7 +21,7 @@
     "eventsAnnouncements": "Events",
     "allEvents": "All Events",
     "addEvent": "Add Event",
-    "announcements": "All Announcements",
+    "announcements": "Announcements",
     "vouchersPromotions": "Promotions",
     "allVouchers": "All Vouchers",
     "createVoucher": "Create Voucher",
