Refactor user roles and permissions, update localization, and implement resident management features
- Removed 'others' role from roleOptions in page.tsx
- Updated role labels in AccountsInfo.tsx for clarity
- Changed redirect logic in SignInForm.tsx to direct all roles to the residents page
- Enhanced UserFilters.tsx to map role text for better user experience
- Modified UserTable.tsx to conditionally show action buttons based on props
- Updated mockAccounts.json to reflect new role names and removed 'others' role
- Adjusted AppSidebar.tsx to include link to residents page
- Added 'resident' key to localization files (en.json, ja.json, vi.json)
- Deleted Korean and Chinese localization files (ko.json, zh.json)
- Created new ResidentPage component for managing residents
- Developed ResidentDetailModal component for displaying resident details

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -51,6 +51,7 @@
     "signUp": "Sign Up",
   "ecommerce": "Analytics",
     "report": "Report",
+    "resident": "Residents",
     "404Error": "404 Error",
     "locations": "Locations",
     "country": "Country",
@@ -183,11 +184,11 @@
     "deleteConfirm": "Are you sure you want to delete this item?"
   },
   
-  "roleAdmin": "Admin",
-  "roleBuildingOwner": "Building Owner",
-  "roleHomeOwner": "Home Owner",
-  "roleTenant": "Tenant",
-  "roleGuest": "Guest",
+  "roleAdmin": "All Users (Admin Committee)",
+  "roleBuildingOwner": "Digital (Future Lab)",
+  "roleHomeOwner": "Manager (Operation Dept.)",
+  "roleTenant": "Commercial Dept.",
+  "roleGuest": "Demo (No Data)",
   "roleOthers": "Others",
   "selectYourRole": "Select Your Role",
   "pleaseSelectAppropriateRole": "Please select the appropriate role to continue",
