--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -51,6 +51,7 @@
     "signUp": "サインアップ",
   "ecommerce": "Analytics",
     "report": "レポート",
+    "resident": "住民",
     "404Error": "404エラー",
     "locations": "ロケーション",
     "country": "国",
