--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -51,6 +51,7 @@
     "signUp": "Đăng ký",
   "ecommerce": "Analytics",
     "report": "Báo cáo",
+    "resident": "Cư dân",
     "404Error": "Lỗi 404",
     "locations": "Địa điểm",
     "country": "Quốc gia",
