feat(bus-tickets): add bus tickets management page with filtering and mock data

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -26,6 +26,7 @@
     "allVouchers": "All Vouchers",
     "createVoucher": "Create Voucher",
     "promotions": "Promotions",
+    "busTickets": "Bus Tickets",
     "facilities": "Facilities",
     "allFacilities": "All Facilities",
     "addFacility": "Add Facility",
