--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -26,6 +26,7 @@
     "allVouchers": "Tất cả voucher",
     "createVoucher": "Tạo voucher",
     "promotions": "Khuyến mãi",
+    "busTickets": "Vé xe buýt",
     "facilities": "Tiện ích",
     "allFacilities": "Tất cả tiện ích",
     "addFacility": "Thêm tiện ích",
