feat: Enhance Events Management with new events, filters, and table layout
- Added new events to the mock data including Yoga Class, Garden Renovation, Children's Art Workshop, and Water Tank Inspection.
- Implemented additional filters for event audience and improved search functionality.
- Refactored event display from grid to table format for better usability.
- Updated event status color coding and text representation.
- Improved UI elements including headers, buttons, and input fields for better accessibility and design consistency.

feat: Add Residents Using Voucher Modal in Vouchers Management

- Introduced a modal to display residents using a selected voucher with detailed information.
- Implemented a table to show resident details including name, apartment, used date, and amount saved.
- Added summary section for total uses, remaining vouchers, and usage rate.

feat: Implement Tickets Management Page

- Created a new Tickets Management page to manage bus ticket types.
- Added mock data for various bus ticket types with filtering options for bus type and status.
- Implemented a table layout for displaying ticket types with actions for viewing, editing, and deleting.
- Enhanced search functionality for ticket types by name, code, or description.

chore: Update App Sidebar and Localization Files

- Added Tickets Management link to the App Sidebar for easy navigation.
- Updated English and Vietnamese localization files to include new tickets management terminology.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -73,6 +73,7 @@
     "allAssets": "All Assets",
     "maintenance": "Maintenance",
     "maintenanceSchedule": "Maintenance Schedule",
+    "ticketsManagement": "Tickets Management",
     "settings": "Settings",
     "generalSettings": "General Settings",
     "systemConfig": "System Configuration",
