--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -73,6 +73,7 @@
     "allAssets": "Tất cả tài sản",
     "maintenance": "Bảo trì",
     "maintenanceSchedule": "Lịch bảo trì",
+    "ticketsManagement": "Quản lý vé",
     "settings": "Cài đặt",
     "generalSettings": "Cài đặt chung",
     "systemConfig": "Cấu hình hệ thống",
