Refactor code structure for improved readability and maintainability

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -74,6 +74,7 @@
     "maintenance": "Maintenance",
     "maintenanceSchedule": "Maintenance Schedule",
     "ticketsManagement": "Tickets Management",
+    "shopManagement": "Shop Management",
     "settings": "Settings",
     "generalSettings": "General Settings",
     "systemConfig": "System Configuration",
