--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -74,6 +74,7 @@
     "maintenance": "Bảo trì",
     "maintenanceSchedule": "Lịch bảo trì",
     "ticketsManagement": "Quản lý vé",
+    "shopManagement": "Quản lý cửa hàng",
     "settings": "Cài đặt",
     "generalSettings": "Cài đặt chung",
     "systemConfig": "Cấu hình hệ thống",
