feat: Enhance role selection UI with improved layout and additional role information
feat: Add payments sub-item to report navigation in sidebar

i18n: Add "Payments" translation to English and Vietnamese locales

feat: Create Payments page with invoice management, filtering, and pagination

feat: Implement EventModal component for creating and editing events

feat: Add utility function to retrieve provinces from CSV data

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -52,6 +52,7 @@
     "signUp": "Sign Up",
   "ecommerce": "Analytics",
     "report": "Report",
+    "payments": "Payments",
     "resident": "Residents",
     "404Error": "404 Error",
     "locations": "Locations",
