--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -52,6 +52,7 @@
     "signUp": "Đăng ký",
   "ecommerce": "Analytics",
     "report": "Báo cáo",
+    "payments": "Thanh toán",
     "resident": "Cư dân",
     "404Error": "Lỗi 404",
     "locations": "Địa điểm",
